@@ -9,6 +9,7 @@ Views 3.x-7.x-dev
     o #535206: Attachment displays repeat exposed filters because exposed filters were left hanging around during cloning.
     o #550560 by donquixote: Fix unterminated string in views.help.ini that breaks under php 5.3
     o #592476 by Garrett Albright: Remove redundant CSS from views-list.css
+    o #581616 by cangeceiro: Defend text color from themes in Views UI.
 
 Views 3.x-6.x-dev
   Bug fixes:
